feat(browser): web automation & browser engine infrastructure (#3) (#115)
Adds @sentinel/browser package with driver-agnostic BrowserEngine interface,
Playwright implementation, device emulation, artifact management, and network
interception with HAR export.

Closes #30, closes #31, closes #32, closes #33, closes #34, closes #35

--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,30 @@ REDIS_PORT=6379
 
 # Model identifier used for test generation and analysis.
 # SENTINEL_AI_MODEL=gpt-4o
+
+# -----------------------------------------------------------------------------
+# Browser Engine (packages/browser)
+# -----------------------------------------------------------------------------
+
+# Browser engine to use. One of: chromium | firefox | webkit
+BROWSER_TYPE=chromium
+
+# Run the browser in headless mode (no visible window). Set to false for
+# local debugging to watch the browser execute tests.
+BROWSER_HEADLESS=true
+
+# Optional device profile name for emulation (e.g., "iPhone 14", "Pixel 7").
+# Leave blank to use default desktop viewport.
+# BROWSER_DEVICE=
+
+# Capture a screenshot automatically on test failure.
+BROWSER_SCREENSHOT_ON_FAILURE=true
+
+# Enable video recording of browser sessions.
+BROWSER_VIDEO_ENABLED=false
+
+# Base directory for all browser artifacts (screenshots, videos, HAR files).
+BROWSER_ARTIFACT_DIR=./artifacts
+
+# Maximum total size (MB) of retained artifacts before oldest are pruned.
+BROWSER_ARTIFACT_MAX_MB=500
